# eu-tech-jobs

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DATA_LICENSE  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new-company.yml
.github/workflows/: daily.yml  eval-tagger.yml  retag-all.yml  site-deploy.yml  tests.yml
companies/ai/: adaptyv.yaml  adept.yaml  aleph-alpha.yaml  amd-ai.yaml  anima.yaml  anthropic.yaml  anyscale.yaml  apple-ai.yaml  argmax.yaml  audeering.yaml  axelera.yaml  black-forest-labs.yaml  celonis.yaml  cerebras.yaml  character-ai.yaml  chromadb.yaml  civitai.yaml  clarity-ai.yaml  cleo.yaml  cohere.yaml  comfy-org.yaml  conveo.yaml  copilotkit.yaml  coreweave.yaml  cosine.yaml  cradle-bio.yaml  databricks.yaml  dataiku.yaml  deepl.yaml  deepmind.yaml  deepset.yaml  descript.yaml  doctrine.yaml  dust.yaml  elevenlabs.yaml  encord.yaml  essential.yaml  firecrawl.yaml  fireworks-ai.yaml  fleek.yaml  (+82 more)
companies/tech/: 1083.yaml  17h10.yaml  1komma5grad.yaml  360learning.yaml  able.yaml  (+863 more)
data/: README.md  feed.xml
docs/: UNREACHABLE_COMPANIES.md
pipeline/: __init__.py  cli.py  filters.py  models.py  orchestrator.py  seed.py
scripts/: archive-stale.py  discover-workday.py  eval_tagger.py  github_stars_discovery.py  hf_orgs_discovery.py  hn_discovery.py  probe_ats.py  promote-career-urls.py  rebuild-companies-parquet.py  seed-balibaris-likes.py  seed-fashion-beauty.py  seed-from-awesome.py  seed-from-yc.py  yc_discovery.py
site/: astro.config.mjs  package-lock.json  package.json
tests/: conftest.py  test_filters.py  test_models.py  test_seed.py
(+10466 files in other folders)
